# prysm

./: .bazelrc  .gitignore  WORKSPACE  all_build.sh  deldata.sh  env.sh  go.mod  go.sum  redeploy.sh  run.sh  run_all_beacon.sh  run_all_validator.sh  run_beaconnode.sh  run_bootnode.sh  run_validator.sh  stopall.sh  testnet.yaml
api/client/beacon/: client.go
beacon-chain/blockchain/: BUILD.bazel  head_test.go  process_block_test.go
beacon-chain/p2p/: fork_watcher.go
beacon-chain/package/: BUILD.bazel
beacon-chain/slasher/: benchmark_test.go  detect_attestations.go  service.go  store.go
beacon-chain/state/: interfaces.go
beacon-chain/sync/: BUILD.bazel
config/params/: config.go  configset_test.go  loader.go  mainnet_config.go
consensus-types/blocks/: execution.go
consensus-types/interfaces/: beacon_block.go
hack/: workspace_status.sh
testing/endtoend/: BUILD.bazel
testing/util/: state.go
tools/fetch-attestations/: main.go
validator/client/: BUILD.bazel  aggregate.go  attest.go  propose.go  service.go  validator.go
validator/client/apirelay/: BUILD.bazel  conversion.go  relayer.go  types.go
validator/package/: BUILD.bazel
validator/rpc/: standard_api.go
validator_keys/v0/: deposit_data-1669521412.json  keystore-m_12381_3600_0_0_0-1669521412.json
validator_keys/v1/: deposit_data-1669521444.json  keystore-m_12381_3600_0_0_0-1669521444.json
validator_keys/v10/: deposit_data-1670127342.json  keystore-m_12381_3600_0_0_0-1670127341.json
validator_keys/v11/: deposit_data-1670127396.json  keystore-m_12381_3600_0_0_0-1670127395.json
(+57 files in other folders)
