load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "conversion.go",
        "relayer.go",
        "types.go",
    ],
    importpath = "github.com/prysmaticlabs/prysm/validator/client/apirelay",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/eth/service:go_default_library",
        "//proto/eth/v1:go_default_library",
        "//proto/eth/v2:go_default_library",
        "//proto/prysm/v1alpha1:go_default_library",
        "@com_github_prysmaticlabs_eth2_types//:go_default_library",
    ],
)
