load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "conversion.go",
        "relayer.go",
        "types.go",
    ],
    importpath = "github.com/prysmaticlabs/prysm/v3/validator/client/apirelay",
    visibility = ["//visibility:public"],
    deps = [
        "//consensus-types/primitives:go_default_library",
        "//proto/eth/service:go_default_library",
        "//proto/eth/v1:go_default_library",
        "//proto/eth/v2:go_default_library",
        "//proto/prysm/v1alpha1:go_default_library",
    ],
)
